fix: excessive spacing below unit tags on home page

--- a/src/app/home/states/home/home.component.scss
+++ b/src/app/home/states/home/home.component.scss
@@ -60,4 +60,8 @@
   width: 300px;
   max-width: 300px;
   max-height: 200px;
+
+  mat-card-actions {
+    margin-bottom: 0px;
+  }
 }
